--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,6 +1,17 @@
 {
   "extends": "@electron-toolkit/tsconfig/tsconfig.node.json",
-  "include": ["electron.vite.config.*", "src/main/*", "src/preload/*", "src/main/utils/*", "src/types/*"],
+  "include": [
+    "electron.vite.config.*",
+    "src/main/*",
+    "'src/preload/*",
+    "src/main/utils/*",
+    "src/types/*",
+    "src/main/handlers/*",
+    "src/main/ipc/*",
+    "src/main/handlers/nodeHandlers",
+    "src/main/handlers/relationshipHandlers",
+    "src/main/handlers/schemaHandlers"
+  ],
   "compilerOptions": {
     "composite": true,
     "types": ["electron-vite/node"]
