--- a/package.json
+++ b/package.json
@@ -22,44 +22,45 @@
   "dependencies": {
     "@electron-toolkit/preload": "1.0.3",
     "@electron-toolkit/utils": "1.0.2",
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.12.3",
-    "cose-base": "^2.2.0",
-    "cytoscape-fcose": "^2.2.0",
-    "lodash": "^4.17.21",
-    "material-react-table": "^1.11.2",
+    "@emotion/react": "11.11.0",
+    "@emotion/styled": "11.11.0",
+    "install": "0.13.0",
+    "lodash": "4.17.21",
     "neo4j-driver": "5.7.0",
-    "react-router-dom": "^6.11.1",
     "sequelize": "6.31.0",
     "tedious": "16.0.0"
   },
   "devDependencies": {
-    "@electron-toolkit/tsconfig": "^1.0.1",
-    "@electron/notarize": "^1.2.3",
-    "@types/cytoscape-fcose": "^2.2.0",
-    "@types/lodash": "^4.14.195",
+    "@electron-toolkit/tsconfig": "1.0.1",
+    "@electron/notarize": "1.2.3",
+    "@mui/icons-material": "5.11.16",
+    "@mui/material": "5.13.2",
+    "@types/cytoscape-fcose": "2.2.0",
+    "@types/lodash": "4.14.195",
     "@types/node": "16.18.21",
     "@types/react": "18.0.30",
-    "@types/react-cytoscapejs": "^1.2.2",
+    "@types/react-cytoscapejs": "1.2.2",
     "@types/react-dom": "18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.0",
-    "@typescript-eslint/parser": "^5.57.0",
-    "@vitejs/plugin-react": "^3.1.0",
-    "cytoscape": "^3.24.0",
-    "electron": "^22.3.4",
-    "electron-builder": "^23.6.0",
-    "electron-vite": "^1.0.21",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
-    "prettier": "^2.8.7",
-    "react": "^18.2.0",
-    "react-cytoscapejs": "^2.0.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^4.9.5",
-    "vite": "^4.2.1"
+    "@typescript-eslint/eslint-plugin": "5.57.0",
+    "@typescript-eslint/parser": "5.57.0",
+    "@vitejs/plugin-react": "3.1.0",
+    "cose-base": "2.2.0",
+    "cytoscape": "3.24.0",
+    "cytoscape-fcose": "2.2.0",
+    "electron": "22.3.4",
+    "electron-builder": "23.6.0",
+    "electron-vite": "1.0.21",
+    "eslint": "8.36.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "7.32.2",
+    "material-react-table": "1.11.5",
+    "prettier": "2.8.7",
+    "react": "18.2.0",
+    "react-cytoscapejs": "2.0.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.11.2",
+    "typescript": "4.9.5",
+    "vite": "4.2.1"
   }
 }
